...
        iconCode: 0xe5d0, // Icons.spa.codePoint
        iconFontFamily: 'MaterialIcons',
        color: Colors.purple,
        route: '/meditation',
      ),
      HomeModuleModel(
        title: 'Investigación',
        iconCode: Icons.science.codePoint,
        iconFontFamily: Icons.science.fontFamily,
        iconFontPackage: Icons.science.fontPackage,
        color: Colors.purpleAccent,
        route: '/research',
      ),
...
